Fix user picture getting shrunk on narrow viewports

--- a/src/views/parsed-content/chat/user-message/styles.scss
+++ b/src/views/parsed-content/chat/user-message/styles.scss
@@ -30,7 +30,7 @@
         color: var(--color-quaternary);
         display: flex;
         align-items: flex-end;
-        margin-left: 16px;
+        margin-left: 12px;
         margin-bottom: -4px;
     }
     
@@ -40,7 +40,7 @@
         justify-content: flex-start;
     
         @media (max-width: 600px) {
-            max-width: 80%;
+            max-width: 90%;
         }
     }
     
@@ -55,7 +55,7 @@
         justify-content: center;
         align-items: center;
         align-self: flex-end;
-
+        min-width: 46px;
     }
 
     .authorName {
